--- a/assets/base.css
+++ b/assets/base.css
@@ -140,25 +140,29 @@ body .stretch > section:first-child{
   flex-grow: 1;
 }
 
-.header--sticky:not(.header--transparent) ~ #main {
+.header-sticky:not(.header-transparent) ~ #main {
   padding-top: calc(var(--header-height) - 1px);
 }
 
-.header--sticky.header--transparent ~ #main {
+.header-sticky.header-transparent ~ #main {
   padding-top: calc(var(--top-bar-height) - 1px);
 }
 
-.preview-bar__container ~ .header--sticky:not(.header--transparent) ~ #main {
+.preview-bar__container ~ .header-sticky:not(.header-transparent) ~ #main {
   padding-top: calc(var(--header-height) - 2px);
 }
 
-.preview-bar__container ~ .header--sticky.header--transparent ~ #main {
+.preview-bar__container ~ .header-sticky.header-transparent ~ #main {
   padding-top: calc(var(--top-bar-height) + var(--preview-height) - 2px);
 }
 
-.header--menu-opened ~ #main {
+.header-menu-opened ~ #main {
   margin-top: var(--preview-height);
-  padding-top: calc(var(--header-height) - 1px);
+  padding-top: var(--header-height);
+}
+
+.header-menu-opened.header-transparent ~ #main {
+  padding-top: var(--top-bar-height);
 }
 
 .preview-bar__container {
