--- a/assets/header.css
+++ b/assets/header.css
@@ -2,19 +2,37 @@
   position: relative;
   z-index: 1001;
   margin-top: var(--preview-height, 0px) !important;
-  margin-bottom: -1px;
 }
 
-.header--menu-opened,
-.header--sticky {
+.header-menu-opened,
+.header-sticky {
+  position: fixed;
   top: var(--header-transform, 0px);
   left: 0;
   right: 0;
 	transition: top var(--animation-duration) var(--transition-function-ease-out);
 }
 
-.header__inner {
+.header__inner,
+.header-sticky .header__inner {
   width: 100%;
+  position: absolute;
+}
+
+.header__inner.header__inner-background,
+.header-sticky .header__inner.header__inner-background {
+  position: static;
+}
+
+.header__inner:has(#search-opener:checked):after,
+.header__inner:has(#mobile-menu-opener:checked):after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: var(--body-height, 100vh);
+  z-index: -2;
 }
 
 .header__content--padding-top {
@@ -23,10 +41,6 @@
 
 .header__content--padding-bottom {
   padding-bottom: var(--padding-bottom-mobile);
-}
-
-.header__content {
-  transition: background var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .header__content-inner {
@@ -118,27 +132,30 @@
 }
 
 .header__search-wrapper {
-  visibility: hidden;
 	pointer-events: none;
 	margin: 0;
 	position: absolute;
-  top: 100%;
+  top: 0;
   left: 50%;
   transform: translate(-50%, 0);
 	width: 100vw;
-	opacity: 0;
   display: block !important;
-  height: calc(var(--body-height) - var(--header-height));
+  height: calc(var(--body-height) - var(--header-height, 39px));
   max-height: 0;
   z-index: -1;
+  transition: max-height var(--animation-duration) var(--transition-function-ease-out);
 }
 
 .header__search-inner {
   display: flex;
   justify-content: center;
-	padding: 18px 75px 18px 18px;
+	padding: calc(18px + var(--header-height, 39px)) 75px 18px 18px;
   transform: translate(0, -100%);
   transition: transform var(--animation-duration) var(--transition-function-ease-out);
+}
+
+.header-transparent .header__search-inner {
+  padding-top: calc(var(--header-height, 39px) - var(--top-bar-height, 0px) + 18px);
 }
 
 .touch[data-orientation='landscape'] .header__date-picker-wrapper {
@@ -157,6 +174,10 @@
   justify-content: center;
   position: relative;
   max-width: 720px;
+}
+
+.header-transparent .header__search-wrapper form {
+  opacity: 0;
 }
 
 .header__search-reset {
@@ -234,14 +255,16 @@
 }
 
 .header__search #search-opener:checked ~ .header__search-wrapper {
-  visibility: visible;
   pointer-events: all;
-  opacity: 1;
   max-height: var(--body-height);
 }
 
 .header__search #search-opener:checked ~ .header__search-wrapper .header__search-inner {
   transform: translate(0, 0);
+}
+
+.header-transparent .header__search #search-opener:checked ~ .header__search-wrapper form {
+  opacity: 1;
 }
 
 .header__search ~ .header__cart {
@@ -259,28 +282,34 @@
   border-radius: var(--border-radius-circle);
 }
 
-.header__cart bq-mini-cart[initialized="true"] + i {
-  display: none;
-}
-
 .loaded .header__search-inner {
   display: flex !important;
 }
 
-.page-scrolled .header--transparent .palette-one.header__inner .header__content,
-.palette-one.header__inner--background .header__content,
-.palette-one.header__inner--background-dynamic .header__content {
+.preview-bar__container ~ .header-sticky .header__inner-background .header__search-inner {
+  padding-top: calc(18px + var(--header-height, 39px) - var(--preview-height, 72px));
+}
+
+.preview-bar__container ~ .header-sticky .header__search-inner {
+  padding-top: calc(18px + var(--header-height, 39px) - var(--preview-height, 72px) - var(--top-bar-height, 0px));
+}
+
+.page-scrolled .header-transparent .palette-one.header__inner .header__content,
+.palette-one.header__inner-background .header__content,
+.palette-one.header__inner:has(#search-opener:checked) .header__content,
+.palette-one.header__inner:has(#mobile-menu-opener:checked) .header__content {
   color: var(--color-primary-1);
   background: var(--background-primary-1);
   border-bottom: 1px solid var(--color-border-1);
 }
 
-.palette-one .header__search {
-  border-color: var(--background-accent-1);
+.palette-one.header__inner:has(#search-opener:checked):after,
+.palette-one.header__inner:has(#mobile-menu-opener:checked):after {
+  background: var(--color-primary-1-67);
 }
 
-.palette-one .header__search-wrapper {
-  background: var(--color-primary-1-67);
+.palette-one .header__search {
+  border-color: var(--background-accent-1);
 }
 
 .palette-one .header__search-inner {
@@ -320,8 +349,10 @@
 }
 
 .palette-one .header__search-icon g,
-.palette-one.header__inner--background .header__search-opener g,
-.palette-one.header__inner--background-dynamic .header__search-opener g {
+.palette-one.header__inner-background .header__search-opener g,
+.page-scrolled .header-transparent .palette-one .header__search-opener g,
+.palette-one.header__inner:has(#search-opener:checked) .header__search-opener g,
+.palette-one.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
   stroke: var(--color-primary-1);
 }
 
@@ -341,25 +372,26 @@
   color: var(--background-primary-1);
 }
 
-.palette-one.header__inner--background .header__cart .fa-spinner-third,
-.palette-one.header__inner--background-dynamic .header__cart .fa-spinner-third {
+.palette-one.header__inner-background .header__cart .fa-spinner-third {
   color: var(--color-primary-1);
 }
 
-.page-scrolled .header--transparent .palette-two.header__inner .header__content,
-.palette-two.header__inner--background .header__content,
-.palette-two.header__inner--background-dynamic .header__content {
+.page-scrolled .header-transparent .palette-two.header__inner .header__content,
+.palette-two.header__inner-background .header__content,
+.palette-two.header__inner:has(#search-opener:checked) .header__content,
+.palette-two.header__inner:has(#mobile-menu-opener:checked) .header__content {
   color: var(--color-primary-2);
   background: var(--background-primary-2);
   border-bottom: 1px solid var(--color-border-2);
 }
 
-.palette-two .header__search {
-  border-color: var(--background-accent-2);
+.palette-two.header__inner:has(#search-opener:checked):after,
+.palette-two.header__inner:has(#mobile-menu-opener:checked):after {
+  background: var(--color-primary-2-67);
 }
 
-.palette-two .header__search-wrapper {
-  background: var(--color-primary-2-67);
+.palette-two .header__search {
+  border-color: var(--background-accent-2);
 }
 
 .palette-two .header__search-inner {
@@ -399,9 +431,11 @@
 }
 
 .palette-two .header__search-icon g,
-.palette-two.header__inner--background .header__search-opener g,
-.palette-two.header__inner--background-dynamic .header__search-opener g {
-  stroke: var(--color-primary-2);
+.palette-two.header__inner-background .header__search-opener g,
+.page-scrolled .header-transparent .palette-two .header__search-opener g,
+.palette-two.header__inner:has(#search-opener:checked) .header__search-opener g,
+.palette-two.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
+  stroke: var(--color-primary-2)
 }
 
 .palette-two .header__search #search-opener:checked ~ .header__search-opener g {
@@ -420,25 +454,26 @@
   color: var(--background-primary-2);
 }
 
-.palette-two.header__inner--background .header__cart .fa-spinner-third,
-.palette-two.header__inner--background-dynamic .header__cart .fa-spinner-third {
+.palette-two.header__inner-background .header__cart .fa-spinner-third {
   color: var(--color-primary-2);
 }
 
-.page-scrolled .header--transparent .palette-three.header__inner .header__content,
-.palette-three.header__inner--background .header__content,
-.palette-three.header__inner--background-dynamic .header__content {
+.page-scrolled .header-transparent .palette-three.header__inner .header__content,
+.palette-three.header__inner-background .header__content,
+.palette-three.header__inner:has(#search-opener:checked) .header__content,
+.palette-three.header__inner:has(#mobile-menu-opener:checked) .header__content {
   color: var(--color-primary-3);
   background: var(--background-primary-3);
   border-bottom: 1px solid var(--color-border-3);
 }
 
-.palette-three .header__search {
-  border-color: var(--background-accent-3);
+.palette-three.header__inner:has(#search-opener:checked):after,
+.palette-three.header__inner:has(#mobile-menu-opener:checked):after {
+  background: var(--color-primary-3-67);
 }
 
-.palette-three .header__search-wrapper {
-  background: var(--color-primary-3-67);
+.palette-three .header__search {
+  border-color: var(--background-accent-3);
 }
 
 .palette-three .header__search-inner {
@@ -478,9 +513,11 @@
 }
 
 .palette-three .header__search-icon g,
-.palette-three.header__inner--background .header__search-opener g,
-.palette-three.header__inner--background-dynamic .header__search-opener g {
-  stroke: var(--color-primary-3);
+.palette-three.header__inner-background .header__search-opener g,
+.page-scrolled .header-transparent .palette-three .header__search-opener g,
+.palette-three.header__inner:has(#search-opener:checked) .header__search-opener g,
+.palette-three.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
+  stroke: var(--color-primary-3)
 }
 
 .palette-three .header__search #search-opener:checked ~ .header__search-opener g {
@@ -499,25 +536,26 @@
   color: var(--background-primary-3);
 }
 
-.palette-three.header__inner--background .header__cart .fa-spinner-third,
-.palette-three.header__inner--background-dynamic .header__cart .fa-spinner-third {
+.palette-three.header__inner-background .header__cart .fa-spinner-third {
   color: var(--color-primary-3);
 }
 
-.page-scrolled .header--transparent .palette-four.header__inner .header__content,
-.palette-four.header__inner--background .header__content,
-.palette-four.header__inner--background-dynamic .header__content {
+.page-scrolled .header-transparent .palette-four.header__inner .header__content,
+.palette-four.header__inner-background .header__content,
+.palette-four.header__inner:has(#search-opener:checked) .header__content,
+.palette-four.header__inner:has(#mobile-menu-opener:checked) .header__content {
   color: var(--color-primary-4);
   background: var(--background-primary-4);
   border-bottom: 1px solid var(--color-border-4);
 }
 
-.palette-four .header__search {
-  border-color: var(--background-accent-4);
+.palette-four.header__inner:has(#search-opener:checked):after,
+.palette-four.header__inner:has(#mobile-menu-opener:checked):after {
+  background: var(--color-primary-4-67);
 }
 
-.palette-four .header__search-wrapper {
-  background: var(--color-primary-4-67);
+.palette-four .header__search {
+  border-color: var(--background-accent-4);
 }
 
 .palette-four .header__search-inner {
@@ -557,9 +595,11 @@
 }
 
 .palette-four .header__search-icon g,
-.palette-four.header__inner--background .header__search-opener g,
-.palette-four.header__inner--background-dynamic .header__search-opener g {
-  stroke: var(--color-primary-4);
+.palette-four.header__inner-background .header__search-opener g,
+.page-scrolled .header-transparent .palette-four .header__search-opener g,
+.palette-four.header__inner:has(#search-opener:checked) .header__search-opener g,
+.palette-four.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
+  stroke: var(--color-primary-4)
 }
 
 .palette-four .header__search #search-opener:checked ~ .header__search-opener g {
@@ -578,25 +618,26 @@
   color: var(--background-primary-4);
 }
 
-.palette-four.header__inner--background .header__cart .fa-spinner-third,
-.palette-four.header__inner--background-dynamic .header__cart .fa-spinner-third {
+.palette-four.header__inner-background .header__cart .fa-spinner-third {
   color: var(--color-primary-4);
 }
 
-.page-scrolled .header--transparent .palette-five.header__inner .header__content,
-.palette-five.header__inner--background .header__content,
-.palette-five.header__inner--background-dynamic .header__content {
+.page-scrolled .header-transparent .palette-five.header__inner .header__content,
+.palette-five.header__inner-background .header__content,
+.palette-five.header__inner:has(#search-opener:checked) .header__content,
+.palette-five.header__inner:has(#mobile-menu-opener:checked) .header__content {
   color: var(--color-primary-5);
   background: var(--background-primary-5);
   border-bottom: 1px solid var(--color-border-5);
 }
 
-.palette-five .header__search {
-  border-color: var(--background-accent-5);
+.palette-five.header__inner:has(#search-opener:checked):after,
+.palette-five.header__inner:has(#mobile-menu-opener:checked):after {
+  background: var(--color-primary-5-67);
 }
 
-.palette-five .header__search-wrapper {
-  background: var(--color-primary-5-67);
+.palette-five .header__search {
+  border-color: var(--background-accent-5);
 }
 
 .palette-five .header__search-inner {
@@ -637,9 +678,11 @@
 }
 
 .palette-five .header__search-icon g,
-.palette-five.header__inner--background .header__search-opener g,
-.palette-five.header__inner--background-dynamic .header__search-opener g {
-  stroke: var(--color-primary-5);
+.palette-five.header__inner-background .header__search-opener g,
+.page-scrolled .header-transparent .palette-five .header__search-opener g,
+.palette-five.header__inner:has(#search-opener:checked) .header__search-opener g,
+.palette-five.header__inner:has(#mobile-menu-opener:checked) .header__search-opener g {
+  stroke: var(--color-primary-5)
 }
 
 .palette-five .header__search #search-opener:checked ~ .header__search-opener g {
@@ -658,8 +701,7 @@
   color: var(--background-primary-5);
 }
 
-.palette-five.header__inner--background .header__cart .fa-spinner-third,
-.palette-five.header__inner--background-dynamic .header__cart .fa-spinner-third {
+.palette-five.header__inner-background .header__cart .fa-spinner-third {
   color: var(--color-primary-5);
 }
 
