--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -20,10 +20,10 @@
     <script>
       // Loading the IFrame Player API code asynchronously.
       const tag = document.createElement('script');
-      tag.src = "https://www.youtube.com/iframe_api";
 
-      const firstScriptTag = document.getElementsByTagName('script')[0];
-      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+      tag.src = 'https://www.youtube.cim/iframe_api';
+
+      document.body.appendChild(tag);
     </script>
   </head>
   <body>
