--- a/snippets/root-styles.liquid
+++ b/snippets/root-styles.liquid
@@ -8,6 +8,7 @@
 
     {%- if settings.primary_color_1 != blank -%}
       --color-primary-1: {{- settings.primary_color_1 -}};
+      --color-primary-1-30: {{- settings.primary_color_1 | append: "4D" -}};
       --color-primary-1-67: {{- settings.primary_color_1 | append: "AB" -}};
       --color-third-1: {{- settings.primary_color_1 | append: "66" -}};
       --color-fourth-1: {{- settings.primary_color_1 | append: "26" -}};
@@ -16,6 +17,7 @@
       --color-border-1: {{- settings.primary_color_1 | append: "26" -}};
     {%- else -%}
       --color-primary-1: #1A3333;
+      --color-primary-1-30: #1A33334D;
       --color-primary-1-67: #1A3333AB;
       --color-third-1: #1A333366;
       --color-fourth-1: #1A333326;
@@ -64,6 +66,7 @@
 
     {%- if settings.primary_color_2 != blank -%}
       --color-primary-2: {{- settings.primary_color_2 -}};
+      --color-primary-2-30: {{- settings.primary_color_2 | append: "4D" -}};
       --color-primary-2-67: {{- settings.primary_color_2 | append: "AB" -}};
       --color-third-2: {{- settings.primary_color_2 | append: "66" -}};
       --color-fourth-2: {{- settings.primary_color_2 | append: "26" -}};
@@ -72,6 +75,7 @@
       --color-border-2: {{- settings.primary_color_2 | append: "26" -}};
     {%- else -%}
       --color-primary-2: #1A3333;
+      --color-primary-2-30: #1A33334D;
       --color-primary-2-67: #1A3333AB;
       --color-third-2: #1A333366;
       --color-fourth-2: #1A333326;
@@ -120,6 +124,7 @@
 
     {%- if settings.primary_color_3 != blank -%}
       --color-primary-3: {{- settings.primary_color_3 -}};
+      --color-primary-3-30: {{- settings.primary_color_3 | append: "4D" -}};
       --color-primary-3-67: {{- settings.primary_color_3 | append: "AB" -}};
       --color-third-3: {{- settings.primary_color_3 | append: "66" -}};
       --color-fourth-3: {{- settings.primary_color_3 | append: "26" -}};
@@ -128,6 +133,7 @@
       --color-border-3: {{- settings.primary_color_3 | append: "26" -}};
     {%- else -%}
       --color-primary-3: #F6F4F2;
+      --color-primary-3-30: #F6F4F24D;
       --color-primary-3-67: #F6F4F2AB;
       --color-third-3: #F6F4F266;
       --color-fourth-3: #F6F4F226;
@@ -176,6 +182,7 @@
 
     {%- if settings.primary_color_4 != blank -%}
       --color-primary-4: {{- settings.primary_color_4 -}};
+      --color-primary-4-30: {{- settings.primary_color_4 | append: "4D" -}};
       --color-primary-4-67: {{- settings.primary_color_4 | append: "AB" -}};
       --color-third-4: {{- settings.primary_color_4 | append: "66" -}};
       --color-fourth-4: {{- settings.primary_color_4 | append: "26" -}};
@@ -184,6 +191,7 @@
       --color-border-4: {{- settings.primary_color_4 | append: "26" -}};
     {%- else -%}
       --color-primary-4: #F6F4F2;
+      --color-primary-4-30: #F6F4F24D;
       --color-primary-4-67: #F6F4F2AB;
       --color-third-4: #F6F4F266;
       --color-fourth-4: #F6F4F226;
@@ -232,6 +240,7 @@
 
     {%- if settings.primary_color_5 != blank -%}
       --color-primary-5: {{- settings.primary_color_5 -}};
+      --color-primary-5-30: {{- settings.primary_color_5 | append: "4D" -}};
       --color-primary-5-67: {{- settings.primary_color_5 | append: "AB" -}};
       --color-third-5: {{- settings.primary_color_5 | append: "66" -}};
       --color-fourth-5: {{- settings.primary_color_5 | append: "26" -}};
@@ -240,6 +249,7 @@
       --color-border-5: {{- settings.primary_color_5 | append: "26" -}};
     {%- else -%}
       --color-primary-5: #1A3333;
+      --color-primary-5-30: #1A33334D;
       --color-primary-5-67: #1A3333AB;
       --color-third-5: #1A333366;
       --color-fourth-5: #1A333326;
